<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>co.id</groupId>
	<artifactId>API_Assignment</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<description>This project will compare two API response from the file</description>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<dependencies>

		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>test</scope>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.assertj/assertj-core -->
		<dependency>
			<groupId>org.assertj</groupId>
			<artifactId>assertj-core</artifactId>
			<version>3.8.0</version>
		</dependency>

		<dependency>
			<groupId>org.json</groupId>
			<artifactId>json</artifactId>
			<version>20190722</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/io.rest-assured/rest-assured -->
		<dependency>
			<groupId>io.rest-assured</groupId>
			<artifactId>rest-assured</artifactId>
			<version>3.0.2</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/io.rest-assured/json-path -->
		<dependency>
			<groupId>io.rest-assured</groupId>
			<artifactId>json-path</artifactId>
			<version>3.0.0</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/io.rest-assured/json-schema-validator -->
		<dependency>
			<groupId>io.rest-assured</groupId>
			<artifactId>json-schema-validator</artifactId>
			<version>4.1.2</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/io.rest-assured/xml-path -->
		<dependency>
			<groupId>io.rest-assured</groupId>
			<artifactId>xml-path</artifactId>
			<version>3.0.0</version>
		</dependency>
		<dependency>
			<groupId>org.hamcrest</groupId>
			<artifactId>java-hamcrest</artifactId>
			<version>2.0.0.0</version>
		</dependency>

		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-server</artifactId>
			<version>3.141.59</version>
		</dependency>
		<dependency>
			<groupId>info.cukes</groupId>
			<artifactId>cucumber-java</artifactId>
			<version>1.2.5</version>
		</dependency>
		<dependency>
			<groupId>info.cukes</groupId>
			<artifactId>cucumber-jvm-deps</artifactId>
			<version>1.0.5</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>info.cukes</groupId>
			<artifactId>cucumber-junit</artifactId>
			<version>1.2.5</version>
		</dependency>
		<dependency>
			<groupId>com.vimalselvam</groupId>
			<artifactId>cucumber-extentsreport</artifactId>
			<version>3.0.2</version>
		</dependency>
		<dependency>
			<groupId>com.aventstack</groupId>
			<artifactId>extentreports</artifactId>
			<version>3.1.2</version>
		</dependency>

		<dependency>
			<groupId>net.masterthought</groupId>
			<artifactId>maven-cucumber-reporting</artifactId>
			<version>4.10.0</version>
		</dependency>

		<dependency>
			<groupId>com.codoid.products</groupId>
			<artifactId>fillo</artifactId>
			<version>1.21</version>
		</dependency>

	</dependencies>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.5.1</version>
					<configuration>
						<source>1.8</source>
						<target>1.8</target>
						<fork>true</fork>
						<!--<executable>C:\Program Files\Java\jdk1.8.0_121\bin\javac.exe</executable> -->
						<!-- <executable>C:\Program Files\Java\jdk1.8.0_144\bin\javac.exe</executable> -->
					</configuration>
				</plugin>

				<plugin>
					<groupId>com.github.temyers</groupId>
					<artifactId>cucumber-jvm-parallel-plugin</artifactId>
					<version>5.0.0</version>
					<executions>
						<execution>
							<id>generateRunners</id>
							<phase>validate</phase>
							<goals>
								<goal>generateRunners</goal>
							</goals>
							<configuration>
								<glue>co.id.stepdefinations</glue>
								<featuresDirectory>src/test/resources/usr/features/api</featuresDirectory>
								<cucumberOutputDir>target/cucumber-parallel</cucumberOutputDir>
								<format>json,html</format>
								<tags>"@apiTest"</tags>
							</configuration>
						</execution>
					</executions>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>2.19</version>
					<configuration>
						<forkCount>3</forkCount>
						<reuseFork>true</reuseFork>
						<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
						<includes>
							<include>**/*TestRunner.java</include>
						</includes>
					</configuration>
				</plugin>


			</plugins>
		</pluginManagement>
	</build>

</project>
